--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+<!--meta na self closing-->
         <title>Cafe Menu</title>
       </head>
+
+      <body>
+        <header>
+        <h1>CAMPER CAFE</h1>
+      <p>Est. 2020</p>
+      </header>
+    
+    </body>
 </html>
