--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       </head>
 
       <body>
-        <header>
+        <header> <!--so header is semantic, to describe that it's a header, cute
+        is there a way of inventing your own tags for html??-->
         <h1>CAMPER CAFE</h1>
       <p>Est. 2020</p>
       </header>
