--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
       <p>Est. 2020</p>
       </header>
     
+      <main>
+        <section>
+            <h2>Coffee</h2>
+          </section>
+    </main>
+
     </body>
 </html>
