--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-<!--meta na self closing-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<!--meta na self closing, and you can have multiple inna the html file??-->
         <title>Cafe Menu</title>
+
+        <link rel="stylesheet" type="text/css" href="style.css">
       </head>
 
       <body>
