PROBLEM A SOLVE, added an image bg??

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       </head>
 
       <body>
+        <div class="menu">
+
+        
         <header> <!--so header is semantic, to describe that it's a header, cute
         is there a way of inventing your own tags for html??-->
         <h1>CAMPER CAFE</h1>
@@ -20,8 +23,11 @@
       <main>
         <section>
             <h2>Coffee</h2>
+
+            <article></article>
+
           </section>
     </main>
-
+</div>
     </body>
 </html>
