--- a/index.html
+++ b/index.html
@@ -24,8 +24,35 @@
         <section>
             <h2>Coffee</h2>
 
-            <article></article>
+            <article title="article elements commonly contain multiple elements that have related information. 
+            In this case, it will contain a coffee flavor and a price for that flavor"
+             class="item">
+                <p class="flavor">French Vanilla</p>
+                <p class="price">3.00</p>
 
+                <!--okay so we put everything in classes fi move am left and right
+                then we put the article inna item class, dk why tho-->
+              </article>
+    
+              <article>
+                <p>Caramel Macchiato
+    
+                </p>
+                <p>3.75</p>
+              </article><article>
+                <p>Pumpkin Spice
+                </p>
+                <p>3.50</p>
+              </article><article>
+                <p>Hazelnut
+                </p>
+                <p>4.00</p>
+              </article>
+              <article>
+                <p>Mocha
+                </p>
+                <p>4.50</p>
+              </article>
           </section>
     </main>
 </div>
