--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             <article title="article elements commonly contain multiple elements that have related information. 
             In this case, it will contain a coffee flavor and a price for that flavor"
              class="item">
-                <p class="flavor">French Vanilla</p>
-                <p class="price">3.00</p>
+                <p class="flavor">French Vanilla</p><p class="price">3.00</p>
 
                 <!--okay so we put everything in classes fi move am left and right
                 then we put the article inna item class, dk why tho-->
@@ -50,7 +49,22 @@
               <angrydiv>Arrrg example!</angrydiv>
 
           </section>
-    </main>
+          <section>
+            <h2>Desserts</h2>
+            <article class="item">
+              <p class="dessert">Donut</p><p class="price">1.50</p>
+            </article>
+            <article class="item">
+              <p class="dessert">Cherry Pie</p><p class="price">2.75</p>
+            </article>
+            <article class="item">
+              <p class="dessert">Cheesecake</p><p class="price">3.00</p>
+            </article>
+            <article class="item">
+              <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
+            </article>
+          </section>
+        </main>
 </div>
     </body>
 </html>
