--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
             </article>
           </section>
         </main>
+
+        <footer>
+          <p>
+            <a href="https://www.freecodecamp.org"> Visit our website</a>
+            </p>        
+                </footer>
 </div>
     </body>
 </html>
