--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>CAMPER CAFE</h1>
       <p>Est. 2020</p>
       </header>
-    
+      <hr><!--standard thin lightskin, i mean grey...line-->
       <main>
         <section>
             <h2>Coffee</h2>
@@ -69,7 +69,8 @@
         <footer>
           <p>
             <a href="https://www.freecodecamp.org"> Visit our website</a>
-            </p>        
+            </p> 
+            <p>123 Free Code Camp Drive </p>      
                 </footer>
 </div>
     </body>
