--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 <p class="flavor">Mocha</p><p class="price">4.50</p>
               </article>
               
-              <angrydiv>Arrrg example!</angrydiv>
+              <angrydiv>custom tag example!</angrydiv>
+              
 
           </section>
           <section>
