--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             </article>
           </section>
         </main>
+        <hr class="bottom-line">
 
         <footer>
           <p>
