--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <section>
             <h2>Coffee</h2>
 
+            <h2>Coffee</h2>
+            <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon">
+
             <article title="article elements commonly contain multiple elements that have related information. 
             In this case, it will contain a coffee flavor and a price for that flavor"
              class="item">
